--- a/configs/e2e_mask_rcnn_R_101_FPN_1x.yaml
+++ b/configs/e2e_mask_rcnn_R_101_FPN_1x.yaml
@@ -30,12 +30,21 @@ MODEL:
     SHARE_BOX_FEATURE_EXTRACTOR: False
   MASK_ON: True
 DATASETS:
-  TRAIN: ("coco_2014_train", "coco_2014_valminusminival")
-  TEST: ("coco_2014_minival",)
+  TRAIN: ("coco_2017_train",)
+  TEST: ("coco_2017_val",)
 DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
-  BASE_LR: 0.02
+  # BASE_LR: 0.02
+  # WEIGHT_DECAY: 0.0001
+  # STEPS: (60000, 80000)
+  # MAX_ITER: 90000
+  # IMS_PER_BATCH: 16
+
+  BASE_LR: 0.0025
   WEIGHT_DECAY: 0.0001
-  STEPS: (60000, 80000)
-  MAX_ITER: 90000
+  STEPS: (480000, 640000)
+  MAX_ITER: 720000
+  IMS_PER_BATCH: 2
+
+OUTPUT_DIR: ./weights/mask_rcnn
