--- a/configs/retinanet/retinanet_R-101-FPN_1x.yaml
+++ b/configs/retinanet/retinanet_R-101-FPN_1x.yaml
@@ -30,6 +30,10 @@ MODEL:
     STRADDLE_THRESH: -1
     FG_IOU_THRESHOLD: 0.5
     BG_IOU_THRESHOLD: 0.4
+VISUAL:
+  LOSS_KEYS:
+  - loss_retina_cls
+  - loss_retina_reg
 DATASETS:
   TRAIN: ("coco_2017_train",)
   TEST: ("coco_2017_val",)
@@ -42,10 +46,16 @@ DATALOADER:
   SIZE_DIVISIBILITY: 32
 SOLVER:
   # Assume 4 gpus
-  BASE_LR: 0.005
+  # BASE_LR: 0.005
+  # WEIGHT_DECAY: 0.0001
+  # STEPS: (120000, 160000)
+  # MAX_ITER: 180000
+  # IMS_PER_BATCH: 8
+
+  BASE_LR: 0.0025
   WEIGHT_DECAY: 0.0001
-  STEPS: (120000, 160000)
-  MAX_ITER: 180000
-  IMS_PER_BATCH: 8
+  STEPS: (240000, 320000)
+  MAX_ITER: 360000
+  IMS_PER_BATCH: 4
 
 OUTPUT_DIR: ./weights/retinanet
