--- a/configs/yolact/yolact_retinanet_R-101-FPN_1x.yaml
+++ b/configs/yolact/yolact_retinanet_R-101-FPN_1x.yaml
@@ -74,7 +74,6 @@ DATASETS:
   TRAIN: ("coco_2017_train",)
   TEST: ("coco_2017_val",)
 INPUT:
-INPUT:
   MIN_SIZE_TRAIN: (800, )
   MAX_SIZE_TRAIN: 1333
   MIN_SIZE_TEST: 800
@@ -85,6 +84,7 @@ DATALOADER:
   SUBSET_SIZE: -1
 TEST:
   DETECTIONS_PER_IMG: 100
+  USE_YOLACT_COCO_EVAL: True
 SOLVER:
   BASE_LR: 5e-4
   WEIGHT_DECAY: 5e-4
