--- a/configs/yolact/yolact_R-101-FPN_1x.yaml
+++ b/configs/yolact/yolact_R-101-FPN_1x.yaml
@@ -51,7 +51,7 @@ MODEL:
     PROTOTYPE_ACTIVATION: "relu"
     MASK_ACTIVATION: "sigmoid"
     COEFF_ACTIVATION: "tanh"
-    CONVERT_MASK_TO_RLE: True
+    CONVERT_MASK_TO_POLY: False
     MASK_TO_TRAIN: 100
     USE_FAST_NMS: True
     # yolact (failed)
@@ -85,7 +85,6 @@ DATALOADER:
   SUBSET_SIZE: -1
 TEST:
   DETECTIONS_PER_IMG: 100
-  USE_YOLACT_COCO_EVAL: True
 SOLVER:
   BASE_LR: 1e-3
   BASE_LR: 5e-4
